Add code to display all bastards, infinite scroller style

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'Charriot Deluxe';
+  src: local('Charriot Deluxe'), url(./fonts/CharriotDeluxe.ttf);
+}
